packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-13/reproducer.js
const lintResults = [undefined];
const lintedRegistry = {
	rules: [],
};

lintResults.forEach(function(result) {
	lintedRegistry.rules[result.ruleId][ruleSetIdx].errorCount += 1; // Noncompliant: any of those intermediate properties can be undefined
});
